--- a/admin/servicetpl/create-edit-servicetpl/create-edit-servicetpl.component.html
+++ b/admin/servicetpl/create-edit-servicetpl/create-edit-servicetpl.component.html
@@ -1,7 +1,7 @@
-<clr-modal [(clrModalOpen)]="modalOpened"  [clrModalSize]="'lg'" #modal>
-    <h3 class="modal-title">{{title}}
-      <wayne-modal-operate [modal]="modal" *ngIf="modalOpened"></wayne-modal-operate>
-    </h3>
+<clr-modal [(clrModalOpen)]="modalOpened" [clrModalSize]="'lg'" #modal>
+  <h3 class="modal-title">{{title}}
+    <wayne-modal-operate [modal]="modal" *ngIf="modalOpened"></wayne-modal-operate>
+  </h3>
   <div class="modal-body">
     <form #ngForm="ngForm">
       <section class="form-block">
@@ -10,7 +10,8 @@
           <div class="select form-control">
             <select id="service_id" [(ngModel)]="serviceTpl.serviceId" [disabled]="actionType==1" name="service_id">
               <!--这是一个坑，如果使用value获取到的是string，使用ngValue获取到的是model本身类型-->
-              <option *ngFor="let service of services" [ngValue]="service.id" [selected]="service.id == serviceTpl.serviceId">{{service.name}}
+              <option *ngFor="let service of services" [ngValue]="service.id"
+                      [selected]="service.id == serviceTpl.serviceId">{{service.name}}
               </option>
             </select>
           </div>
