--- a/portal/service/list-service/list-service.component.html
+++ b/portal/service/list-service/list-service.component.html
@@ -6,7 +6,7 @@
     </ng-container>
   </clr-dg-column>
   <clr-dg-column class="col-time" [clrDgSortBy]="'createTime'">
-    <ng-container *clrDgHideableColumn="showState['创建时间']">
+    <ng-container *clrDgHideableColumn="showState['create_time']">
       创建时间
     </ng-container>
   </clr-dg-column>
