frontend:add namespace path

--- a/admin/sidenav/sidenav.component.html
+++ b/admin/sidenav/sidenav.component.html
@@ -27,6 +27,13 @@
         Node
       </a>
       <a clrVerticalNavLink
+         routerLink="kubernetes/namespace"
+         [routerLinkActiveOptions]="{exact:true}"
+         routerLinkActive="active">
+        <clr-icon clrVerticalNavIcon shape="vmw-app"></clr-icon>
+        Namespace
+      </a>
+      <a clrVerticalNavLink
          routerLink="kubernetes/deployment"
          [routerLinkActiveOptions]="{exact:true}"
          routerLinkActive="active">
