--- a/admin/servicetpl/create-edit-servicetpl/create-edit-servicetpl.component.html
+++ b/admin/servicetpl/create-edit-servicetpl/create-edit-servicetpl.component.html
@@ -11,7 +11,7 @@
             <select id="service_id" [(ngModel)]="serviceTpl.serviceId" [disabled]="actionType==1" name="service_id">
               <!--这是一个坑，如果使用value获取到的是string，使用ngValue获取到的是model本身类型-->
               <option *ngFor="let service of services" [ngValue]="service.id"
-                      [selected]="service.id == serviceTpl.serviceId">{{service.name}}
+                      [selected]="service.id === serviceTpl.serviceId">{{service.name}}
               </option>
             </select>
           </div>
