--- a/admin/servicetpl/create-edit-servicetpl/create-edit-servicetpl.component.html
+++ b/admin/servicetpl/create-edit-servicetpl/create-edit-servicetpl.component.html
@@ -6,7 +6,7 @@
     <form #ngForm="ngForm">
       <section class="form-block">
         <div class="form-group" style="padding-left: 135px;">
-          <label for="service_id" class="col-md-3 form-group-label-override required">服务</label>
+          <label for="service_id" class="clr-col-md-3 form-group-label-override required">服务</label>
           <div class="select form-control">
             <select id="service_id" [(ngModel)]="serviceTpl.serviceId" [disabled]="actionType==1" name="service_id">
               <!--这是一个坑，如果使用value获取到的是string，使用ngValue获取到的是model本身类型-->
@@ -17,14 +17,14 @@
           </div>
         </div>
         <div class="form-group" style="padding-left: 135px;">
-          <label for="description" class="col-md-3 form-group-label-override">描述</label>
+          <label for="description" class="clr-col-md-3 form-group-label-override">描述</label>
           <textarea id="description" [(ngModel)]="serviceTpl.description"
                     name="description"
                     rows="3">
           </textarea>
         </div>
         <div class="form-group" style="padding-left: 135px;">
-          <label for="template" class="col-md-3 form-group-label-override">模版</label>
+          <label for="template" class="clr-col-md-3 form-group-label-override">模版</label>
           <wayne-ace-editor-box></wayne-ace-editor-box>
         </div>
       </section>
