--- a/portal/service/create-edit-service/create-edit-service.component.html
+++ b/portal/service/create-edit-service/create-edit-service.component.html
@@ -4,7 +4,7 @@
     <form #ngForm="ngForm">
       <section class="form-block">
         <div class="form-group" style="padding-left: 135px;">
-          <label for="name" class="col-md-3 form-group-label-override required">名称</label>
+          <label for="name" class="clr-col-md-3 form-group-label-override required">名称</label>
           <label for="name" aria-haspopup="true" role="tooltip" [class.invalid]="!isNameValid"
                  class="tooltip tooltip-validation tooltip-md tooltip-bottom-left form-control">
             <label *ngIf="app && actionType==0 && nameGenerateRuleConfig=='join'">{{app.name}}-</label>
@@ -23,7 +23,7 @@
           <span class="spinner spinner-inline" [hidden]="!checkOnGoing"></span>
         </div>
         <div class="form-group" style="padding-left: 135px;">
-          <label class="col-md-3 form-group-label-override required">机房</label>
+          <label class="clr-col-md-3 form-group-label-override required">机房</label>
           <div *ngFor="let cluster of clusters" style="padding-right: 15px" class="checkbox-inline">
             <input [(ngModel)]="cluster['checked']"
                    type="checkbox"
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="form-group" style="padding-left: 135px;">
-          <label for="description" class="col-md-3 form-group-label-override">描述</label>
+          <label for="description" class="clr-col-md-3 form-group-label-override">描述</label>
           <textarea id="description" [(ngModel)]="service.description"
                     name="description"
                     rows="3">
