--- a/portal/service/create-edit-servicetpl/create-edit-servicetpl.component.html
+++ b/portal/service/create-edit-servicetpl/create-edit-servicetpl.component.html
@@ -1,12 +1,12 @@
-<div class="row" style="padding-left: 5%">
-  <div class="row flex-items-xs-between flex-items-xs-top" style="padding-left: 15px; padding-right: 15px;">
+<div class="clr-row" style="padding-left: 5%">
+  <div class="clr-row flex-items-xs-between flex-items-xs-top" style="padding-left: 15px; padding-right: 15px;">
     <h3 class="header-title">创建负载均衡模版</h3>
   </div>
   <form #ngForm="ngForm" style="padding-right: 30px;width: 100%">
     <section class="form-block wrap">
       <label class="label-level1">发布信息</label>
       <div class="form-group form-group-padding">
-        <label class="col-md-3 form-group-label-override required">发布说明</label>
+        <label class="clr-col-md-3 form-group-label-override required">发布说明</label>
         <textarea name="description"
                   [(ngModel)]="serviceTpl.description"
                   required
@@ -19,7 +19,7 @@
       <div style="float: left;width: 60%">
         <label class="label-level1">服务配置</label>
         <div class="form-group form-group-padding">
-          <label class="col-md-3 form-group-label-override required">类型</label>
+          <label class="clr-col-md-3 form-group-label-override required">类型</label>
           <label aria-haspopup="true" role="tooltip" class="tooltip tooltip-validation tooltip-md tooltip-bottom-left">
             <div class="select">
               <select name="serviceType" [(ngModel)]="kubeService.spec.type">
@@ -30,13 +30,16 @@
               </select>
             </div>
           </label>
-          <clr-checkbox
+          <!-- <clr-checkbox
             style="margin-left: 20px;padding-top: 5px"
-            [clrInline]="true"
             name="headless"
             [(ngModel)]="headless">
             Headless
-          </clr-checkbox>
+          </clr-checkbox> -->
+          <clr-checkbox-wrapper style="margin-left: 20px;padding-top: 5px">
+              <input type="checkbox" clrCheckbox name="headless" required value="Headless" [(ngModel)]="headless" />
+              <label>Headless</label>
+            </clr-checkbox-wrapper>
         </div>
         <div *ngIf="kubeService.spec.type != 'ExternalName'">
           <label class="label-level2">端口
@@ -47,7 +50,7 @@
           </label>
           <div *ngFor="let port of kubeService.spec.ports; let i = index">
             <div class="form-group form-group-padding">
-              <label class="col-md-3 form-group-label-override required">端口</label>
+              <label class="clr-col-md-3 form-group-label-override required">端口</label>
 
               <input type="number" style="width: 180px"
                      name="port.targetPort-{{i}}"
@@ -86,7 +89,7 @@
           </label>
           <div *ngFor="let selector of labelSelector; let i = index">
             <div class="form-group form-group-padding">
-              <label class="col-md-3 form-group-label-override required">选择器</label>
+              <label class="clr-col-md-3 form-group-label-override required">选择器</label>
               <input type="text" style="width: 217px"
                      name="selector.key-{{i}}"
                      [(ngModel)]="selector.key"
@@ -111,7 +114,7 @@
         <div *ngIf="kubeService.spec.type === 'ExternalName'">
           <label class="label-level2">外部域名</label>
           <div class="form-group form-group-padding">
-            <label class="col-md-3 form-group-label-override required">域名</label>
+            <label class="clr-col-md-3 form-group-label-override required">域名</label>
             <input type="text" style="width: 217px"
                    name="externalName"
                    [(ngModel)]="kubeService.spec.externalName"
