--- a/portal/service/publish-tpl/publish-tpl.component.html
+++ b/portal/service/publish-tpl/publish-tpl.component.html
@@ -4,7 +4,7 @@
     <form #publishForm="ngForm">
       <section class="form-block">
         <div class="form-group" style="padding-left: 135px;">
-          <label class="col-md-3 form-group-label-override required">机房</label>
+          <label class="clr-col-md-3 form-group-label-override required">机房</label>
           <div *ngFor="let cluster of clusters;let i=index" style="padding-right: 20px" class="checkbox-inline">
             <input [(ngModel)]="cluster['checked']"
                    type="checkbox"
@@ -14,7 +14,7 @@
           </div>
         </div>
         <div *ngIf="actionType==3" class="form-group" style="padding-left: 135px;">
-          <label class="col-md-3 form-group-label-override">强制下线
+          <label class="clr-col-md-3 form-group-label-override">强制下线
             <a role="tooltip" aria-haspopup="true" class="tooltip tooltip-lg">
               <clr-icon shape="info-circle" size="24"></clr-icon>
               <span class="tooltip-content">确认资源已经不存在于Kubernetes，可以打开此开关强制下线</span>
