--- a/portal/service/status/status.component.html
+++ b/portal/service/status/status.component.html
@@ -4,44 +4,44 @@
     <hr>
     <form>
       <section class="form-block form-box">
-        <div class="row group">
-          <div class="col-sm-3">
+        <div class="clr-row group">
+          <div class="clr-col-sm-3">
             负载均衡名称
           </div>
-          <div class="col-sm-9">
+          <div class="clr-col-sm-9">
             {{service?.metadata.name}}
           </div>
         </div>
 
-        <div class="row group">
-          <div class="col-sm-3">
+        <div class="clr-row group">
+          <div class="clr-col-sm-3">
             类型
           </div>
-          <div class="col-sm-9">
+          <div class="clr-col-sm-9">
             {{service?.spec.type}}
           </div>
         </div>
-        <div class="row group">
-          <div class="col-sm-3">
+        <div class="clr-row group">
+          <div class="clr-col-sm-3">
             集群IP
           </div>
-          <div class="col-sm-9">
+          <div class="clr-col-sm-9">
             {{service?.spec.clusterIP}}
           </div>
         </div>
-        <div class="row group">
-          <div class="col-sm-3">
+        <div class="clr-row group">
+          <div class="clr-col-sm-3">
             端口
           </div>
-          <div class="col-sm-9">
+          <div class="clr-col-sm-9">
             {{getPorts()}}
           </div>
         </div>
-        <div *ngFor="let selector of getSelectors(); let i = index" class="row group">
-          <div class="col-sm-3">
+        <div *ngFor="let selector of getSelectors(); let i = index" class="clr-row group">
+          <div class="clr-col-sm-3">
             <div *ngIf="i === 0">选择器</div>
           </div>
-          <div class="col-sm-9">
+          <div class="clr-col-sm-9">
             {{selector}}
           </div>
         </div>
