frontend: fix servicetpl error

--- a/portal/service/create-edit-servicetpl/create-edit-servicetpl.component.html
+++ b/portal/service/create-edit-servicetpl/create-edit-servicetpl.component.html
@@ -132,7 +132,7 @@ Headless: 集群不为服务生成IP，集群内部通过服务的后端 Endpoin
     </section>
   </form>
 </div>
-<div class="clr-wizard-footer-buttons tpl-bottom" [style.top.px]="top">
+<div class="clr-wizard-footer-buttons tpl-bottom">
   <button type="button" class="btn btn-outline" (click)="onCancel()">取消</button>
   <button type="button" class="btn btn-primary" (click)="openModal()">高级配置</button>
   <button type="button" class="btn btn-primary" [disabled]="!isValid" (click)="onSubmit()">提交</button>
