--- a/portal/service/create-edit-service/create-edit-service.component.html
+++ b/portal/service/create-edit-service/create-edit-service.component.html
@@ -4,37 +4,37 @@
     <form #ngForm="ngForm">
       <section class="form-block">
         <div class="form-group" style="padding-left: 135px;">
-          <label for="name" class="clr-col-md-3 form-group-label-override required">名称</label>
-          <label for="name" aria-haspopup="true" role="tooltip" [class.invalid]="!isNameValid"
-                 class="tooltip tooltip-validation tooltip-md tooltip-bottom-left form-control">
+          <label class="clr-col-md-3 form-group-label-override required" for="name">名称</label>
+          <label [class.invalid]="!isNameValid" aria-haspopup="true" class="tooltip tooltip-validation tooltip-md tooltip-bottom-left form-control" for="name"
+                 role="tooltip">
             <label *ngIf="app && actionType==0 && nameGenerateRuleConfig=='join'">{{app.name}}-</label>
-            <input type="text" id="name" [(ngModel)]="service.name"
-                   name="name"
-                   required
-                   placeholder="英文小写"
-                   [readonly]="actionType==1"
+            <input (keyup)='checkNameValid()' [(ngModel)]="resource.name" [readonly]="actionType==1"
+                   id="name"
                    maxlength="64"
+                   name="name"
                    pattern="[a-z]([-a-z0-9]*[a-z0-9])?"
-                   (keyup)='handleValidation()'>
+                   placeholder="英文小写"
+                   required
+                   type="text">
             <span class="tooltip-content">
               服务名称不符合规范，验证规则[a-z]([-a-z0-9]*[a-z0-9])?
             </span>
           </label>
-          <span class="spinner spinner-inline" [hidden]="!checkOnGoing"></span>
+          <span [hidden]="!checkOnGoing" class="spinner spinner-inline"></span>
         </div>
         <div class="form-group" style="padding-left: 135px;">
           <label class="clr-col-md-3 form-group-label-override required">机房</label>
-          <div *ngFor="let cluster of clusters" style="padding-right: 15px" class="checkbox-inline">
-            <input [(ngModel)]="cluster['checked']"
-                   type="checkbox"
+          <div *ngFor="let cluster of clusters" class="checkbox-inline" style="padding-right: 15px">
+            <input [(ngModel)]="clusterMetas[cluster.name].checked"
                    id="{{cluster.name}}-check"
-                   name="{{cluster.name}}-check">
+                   name="{{cluster.name}}-check"
+                   type="checkbox">
             <label for="{{cluster.name}}-check">{{cluster.name}}</label>
           </div>
         </div>
         <div class="form-group" style="padding-left: 135px;">
-          <label for="description" class="clr-col-md-3 form-group-label-override">描述</label>
-          <textarea id="description" [(ngModel)]="service.description"
+          <label class="clr-col-md-3 form-group-label-override" for="description">描述</label>
+          <textarea [(ngModel)]="resource.description" id="description"
                     name="description"
                     rows="3">
           </textarea>
@@ -43,7 +43,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline" (click)="onCancel()">取消</button>
-    <button type="button" class="btn btn-primary" [disabled]="!isValid" (click)="onSubmit()">提交</button>
+    <button (click)="onCancel()" class="btn btn-outline" type="button">取消</button>
+    <button (click)="onSubmit()" [disabled]="!isValid" class="btn btn-primary" type="button">提交</button>
   </div>
 </clr-modal>
