frontend: fix service overflow box

--- a/portal/service/create-edit-servicetpl/create-edit-servicetpl.component.html
+++ b/portal/service/create-edit-servicetpl/create-edit-servicetpl.component.html
@@ -16,8 +16,8 @@
           </textarea>
         </div>
       </section>
-      <section class="form-block wrap" style="overflow: hidden;">
-        <div style="float: left;width: 60%">
+      <section class="form-block wrap">
+        <div style="display: inline-block;width: 60%">
           <label class="label-level1">服务配置</label>
           <div class="form-group form-group-padding">
             <label class="clr-col-md-3 form-group-label-override required">类型</label>
@@ -123,7 +123,7 @@
             </div>
           </div>
         </div>
-        <div style="float: left;width: 40%;margin-top: 5px">
+        <div style="display: inline-block;width: 40%;margin-top: 5px">
         <span><h4>服务类型说明</h4>
   ClusterIP: 以集群为服务生成的集群内唯一的IP为基础，集群内部可以通过此IP来访问服务。<br>
   NodePort: 设置类型为NodePort时，集群外部可以通过 NodePort方式来访问服务。<br>
