--- a/portal/service/service.component.html
+++ b/portal/service/service.component.html
@@ -55,7 +55,7 @@
   <list-service [services]="services"
                 (cloneTpl)="cloneServiceTpl($event)"
                 [serviceTpls]="serviceTpls"
-                (edit)="editService($event)"
+                (edit)="editService()"
                 (paginate)="retrieve($event)"
                 [appId]="appId"
                 [showState]="showState"
