frontend: service create publish

--- a/portal/service/create-edit-service/create-edit-service.component.html
+++ b/portal/service/create-edit-service/create-edit-service.component.html
@@ -3,19 +3,22 @@
   <div class="modal-body">
     <form #ngForm="ngForm" clrForm clrLayout="horizontal">
       <section class="form-block">
-        <clr-input-container>
-          <label for="name" class="required">{{'TITLE.NAME' | translate}}</label>
-          <input type="text" clrInput id="name" [(ngModel)]="resource.name" name="name" style="width: 15rem" required *ngIf="app && actionType==0"
-            [readonly]="actionType==1" [placeholder]="'PLACEHOLDER.APP_NAME' | translate" pattern="[a-z]([-a-z0-9]*[a-z0-9])?"
-            maxlength="64" (keyup)='checkNameValid()'>
-          <clr-control-helper>
-            <span *ngIf="app && actionType==0 && nameGenerateRuleConfig=='join'">{{app.name}}-</span>
-            <span *ngIf="app && actionType==1">{{resource.name}}</span>
-          </clr-control-helper>
-          <clr-control-error>
-            {{'RULE.REGEXT' | translate}}[a-z]([-a-z0-9]*[a-z0-9])?
-          </clr-control-error>
-        </clr-input-container>
+        <div class="clr-form-control clr-row">
+          <label class="clr-control-label required">
+            {{'TITLE.NAME' | translate}}
+          </label>
+          <div class="clr-control-container clr-col-md-10 clr-col-12"
+            [class.clr-error]="name.invalid && (name.dirty || name.touched)">
+            <div class="clr-input-wrapper">
+              <span *ngIf="app && actionType==0 && nameGenerateRuleConfig=='join'">{{app.name}}-</span>
+              <input type="text" class="clr-input" id="name" [(ngModel)]="resource.name" name="name" style="width: 15rem" required
+                 [readonly]="actionType==1" [placeholder]="'PLACEHOLDER.APP_NAME' | translate"
+                pattern="[a-z]([-a-z0-9]*[a-z0-9])?" maxlength="64" (keyup)='checkNameValid()' #name="ngModel">
+            </div>
+            <span *ngIf="name.invalid && (name.dirty || name.touched)"
+              class="clr-subtext">{{'RULE.REGEXT' | translate}}[a-z]([-a-z0-9]*[a-z0-9])?</span>
+          </div>
+        </div>
         <div class="clr-form-control clr-row">
           <label class="clr-control-label required">{{'TITLE.CLUSTER' | translate}}</label>
           <span class="warning-text" *ngIf="!clusters || clusters && clusters.length === 0">{{'CRONJOB.CREATE_EDIT.CLUSTER_MESSAGE'
